# polars_hackathon

./: .gitattributes  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
content/: constants.py  utils.py
content/1 - Exploring Polars/: exploring.ipynb
content/2 - Data Analysis/: data_analysis.ipynb
content/3 - Pandas to Polars/: pandas_to_polars.ipynb
content/4 - Lazy Loading Evaluation/: lazy_loading_queries.ipynb
content/5 - Sentiment Prediction/: sentiment-prediction.ipynb
content/data/imdb_dataset/: info.txt
