[tool.poetry]
name = "codebeez-polars-hackathon"
version = "0.1.0"
description = ""
authors = ["Reinier Noorda <reinier@codebeez.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.12"
polars = "^1.8.2"
pandas = "^2.2.3"
memory-profiler = "^0.61.0"
seaborn = "^0.13.2"
altair = "^5.4.1"
tensorflow-io-gcs-filesystem = "0.37.1"
jupyter = "^1.1.1"
notebook = "^7.2.2"
ruff = "0.5.7"
scikit-learn = "^1.5.2"
tensorflow = "^2.17.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
